1. fixing issue with geocoding lookup where it called its callback multiple times.. triggering multiple success calls to the VC and multiple pushes to the nav controller... 2. on app launch with initiated countdown, embedding in nav controller so top bar is shown

--- a/trump-alarm/Base.lproj/Main.storyboard
+++ b/trump-alarm/Base.lproj/Main.storyboard
@@ -214,6 +214,9 @@ Sending you alarms between now and election day of the importance of your vote!
                         </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <connections>
+                        <segue destination="h1h-pq-3dQ" kind="show" identifier="ShowCountDownFromIntroSegue" id="ZNx-Sr-BVB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bjP-gG-xGz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
